--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "author": "Brad Traversy",
+  "author": "demo",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.1.0",
